Protest/Front/view.css
/* ... */
.view-interface-legend-entry:hover {
	background-color: var(--clr-select);
}

.view-interface-tooltip {
	height: 20px;
}

.view-interface-tooltip > div:nth-child(1) {
	display: inline-block;
	width: 10px;
	height: 10px;
	border-radius: 2px;
	margin: 4px;
}

.view-interface-tooltip > div:nth-child(2) {
	display: inline-block;
	font-size: small;
	width: calc(100% - 20px);
	white-Space: nowrap;
	overflow: hidden;
	text-Overflow: ellipsis;
}

.view-lifeline-graph {
	position: relative;
	width: 100%;
	height: 132px;
	background-color: #505050;
	overflow: hidden;
}

.view-lifeline-graph:first-child {
	border-radius: 4px 4px 0 0;
}

.view-lifeline-graph:last-child {
	border-radius: 0 0 4px 4px;
}

.view-lifeline-graph > svg {
	position: absolute;
	right: 0;
	top: 0;
}

.view-lifeline-graph > .view-lifeline-label {
	position: absolute;
	z-index: 1;
	left: 8px;
	bottom: 28px;
	font-size: 12px;
	color: var(--clr-light);
	font-weight: 600;
	text-shadow: var(--clr-dark) 0 0 2px;
	transition: .2s;
}

.view-lifeline-graph > .view-lifeline-icon {
	position: absolute;
	z-index: 1;
	left: 8px;
	bottom: 48px;
	width: 32px;
	height: 32px;
	background-size: cover;
	filter: drop-shadow(var(--clr-dark) 0 0 2px);
	transition: .4s;
}

.view-lifeline-graph:hover > .view-lifeline-label,
.view-lifeline-graph:hover > .view-lifeline-icon{
	opacity: 0;
	visibility: hidden;
	transform: translateX(-24px);
}

.view-lifeline-graph > svg > text {
	filter: drop-shadow(0 0 2px #000);
	transition: .2s transform, .1s opacity;
}

.view-lifeline-graph > svg > * {
	pointer-events: none;
}

.view-info-box,
.view-warning-box,
.view-error-box,
.view-critical-box {
	font-weight: 600;
	margin: 0 0 4px 0;
	padding: 6px 0 6px 36px;
	border-radius: 4px;
	background-position: 4px center;
	background-size: 24px 24px;
	background-repeat: no-repeat;
	-webkit-user-select: text;
	user-select: text;
}

.view-info-box {
	color: var(--clr-dark);
	background-color: var(--clr-pane);
	background-image: url(mono/info.svg);
}

.view-warning-box {
	color: var(--clr-dark);
	background-color: var(--clr-warning);
	background-image: url(mono/warning.svg);
}

.view-error-box {
	color: var(--clr-dark);
	background-color: var(--clr-error);
	background-image: url(mono/error.svg);
}

.view-critical-box {
	color: var(--clr-dark);
	background-color: var(--clr-critical);
	background-image: url(mono/critical.svg);
}

.view-info-box[source]::before,
.view-warning-box[source]::before,
.view-error-box[source]::before,
.view-critical-box[source]::before { /*source*/
	display: inline-block;
	content: attr(source);
	font-weight: bold;
	vertical-align: bottom;
	min-width: 50px;
	padding: 0 4px;
	margin: 0 8px 0 0;
	border-radius: 4px;
	text-align: center;
	color: var(--clr-contrast);
	overflow: hidden;
	white-space: nowrap;
}

.view-info-box[source]::before {
	color: var(--clr-pane);
	background-color: #202020;
}
.view-warning-box[source]::before {
	color: var(--clr-warning);
	background-color: #202020;
}
.view-error-box[source]::before {
	color: var(--clr-error);
	background-color: #202020;
}
.view-critical-box[source]::before {
	color: var(--clr-critical);
	background-color: #202020;
}

.view-side-tools {
	position: absolute;
	left: 4px;
	top: 48px;
	width: 40px;
	z-index: 2;
	min-height: 40px;
	transition: .2s;
}

.view-side-tools > button {
	margin: 0;
	padding: 0;
	margin-bottom: 6px;
	width: 100%;
	min-width: 24px !important;
	height: 32px;
	line-height: 32px;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	text-align: left;
	padding-left: 40px;
	color: var(--clr-dark);
	border-left: 1px solid #777;
	border-bottom: 1px solid #777;
	background-color: var(--clr-pane);
	background-size: 26px 26px;
	background-position: 7px center;
	background-repeat: no-repeat;
}

.view-side-tools > button:hover,
.view-side-tools > button:focus-visible {
	width: 192px !important;
	filter: brightness(1.2);
}

.view-side-tools > button:active {
	filter: brightness(1.1);
}

.view-side-tools > button[busy]:after {
	content: "";
	position: absolute;
	right: 0px;
	width: 14px;
	height: 14px;
	margin: 18px 0px;
	box-sizing: border-box;

	border-style: solid;
	border-radius: 50%;
	border-width: 2px 3px 4px 0px;
	border-color: var(--clr-accent) var(--clr-accent) transparent transparent;

	animation: spin 2s linear infinite;
	transition: .2s;
}

.view-fetch-floating-button {
	position: absolute;
	left: 2px;
	width: 36px !important;
	min-width: 36px !important;
	height: 36px !important;
	margin: 2px 4px !important;
	background-image: url(mono/ball.svg?light);
	background-size: 34px 34px;
	background-position: center;
	background-repeat: no-repeat;
	transition: .2s !important;
}

.view-fetch-dropdown {
	float: left;
	width: 32px;
	min-width: 32px !important;
	background-image: url(mono/add.svg?light);
	background-position: center !important;
}

.view-fetch-dropdown > div {
	visibility: hidden;
	position: absolute;
	bottom: 0px;
	opacity: 0;
	width: 188px;
	height: 114px;
	background-color: rgb(96,96,96);
	border-radius: 4px;
	box-shadow: var(--clr-dark) 0 0 4px;
	transform: translateX(0);
	transition: .2s;
}

.view-fetch-dropdown:focus > div,
.view-fetch-dropdown:focus-within > div {
	visibility: visible;
	opacity: 1;
	transform: translateX(16px);
}

.view-fetch-dropdown > div > * {
	width: calc(100% - 8px);
}

@container (min-width: 800px) {
	.view-timeline,
	.view-toolbar,
	.view-scroll {
		left: 204px;
	}

	.view-side-tools {
		width: 192px;
	}
	.view-side-tools > button[busy]:after {
		width: 20px;
		height: 20px;
		margin: 7px 4px !important;
		border-width: 3px 4px 5px 0px;
	}

	.view-fetch-floating-button {
		left: 154px;
	}
}

@keyframes zoom-in-background {
	0%  { background-position: calc(100% - 12px) center; background-size: 0px 0px; }
	80% { background-position: calc(100% - 2px) center; background-size: 20px 20px; }
	100%{ background-position: calc(100% - 4px) center; background-size: 16px 16px; }
}
/* ... */

